--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 jdk:
-- oraclejdk8
-- oraclejdk9
+- openjdk8
+- openjdk9
 after_success:
 - mvn clean test jacoco:report coveralls:report -DrepoToken=$RepoToken
 env:
